qa_artifacts/0.3.7.28/SCREENSHOT_INSTRUCTIONS.md
# LifeUndo 0.3.7.28 - ИНСТРУКЦИИ ДЛЯ СКРИНШОТОВ

## Обязательные скриншоты для приёмки (10 штук):

### 1. popup_en_full.png
- Открыть расширение на обычном сайте
- Переключить язык на английский
- Скриншот: **весь UI на английском** (шапка, бейдж, заголовки секций, кнопки, пустые состояния, низовые ссылки `/en/...`)

### 2. popup_ru_full.png  
- Переключить язык на русский
- Скриншот: **весь UI на русском** (ссылки `/ru/...`)

### 3. links_localized.png
- Крупно показать только низовые ссылки при EN и RU
- EN: `/en/...`, RU: `/ru/...`

### 4. recent_inputs_ok.png
- На https://example.com ввести текст в input и textarea
- Открыть popup
- Скриншот: элементы видны, пустое состояние тоже локализуется

### 5. screenshot_taken.png
- Нажать кнопку "Take screenshot" / "Сделать скрин"
- Скриншот: видна миниатюра в секции Screenshots; кнопка на EN

### 6. recently_closed_ok.png
- Закрыть несколько вкладок
- Открыть popup
- Скриншот: подпись окон по локали (EN: "{n} tabs", RU: "вкладок: {n}")

### 7. trial_day6.png
- В консоли popup выполнить:
```javascript
browser.storage.local.set({ trial_startTs: Date.now() - 6 * 86400000 });
location.reload();
```
- Скриншот: серый баннер «Пробный период скоро закончится»

### 8. trial_expired.png
- В консоли popup выполнить:
```javascript
browser.storage.local.set({ trial_startTs: Date.now() - 8 * 86400000 });
location.reload();
```
- Скриншот: фиолетовый баннер «Пробный период истёк»

### 9. amo_lint_ok.png
- Выполнить: cd ext/firefox/0.3.7.28 && npx web-ext lint
- Скриншот: вывод с 0 errors

### 10. amo_upload_ok.png
- Загрузить XPI в AMO (только после всех проверок)
- Скриншот: страница валидации AMO «no errors»

## Критический тест EN/RU:

1. **EN тест**: Переключить на EN → **весь** UI на английском (шапка, бейдж, заголовки секций, кнопки, пустые состояния, низовые ссылки `/en/...`)
2. **RU тест**: Переключить на RU → весь UI на русском; нет английских хвостов
3. **Персистентность**: Перезапуск popup сохраняет язык
4. **Нет хардкодов**: Select-String -Pattern '[\u0400-\u04FF]' не находит кириллицу вне _locales
5. **web-ext lint = 0**: AMO auto-validation ок; релизная папка полная

## Тестирование:

1. Загрузить временное дополнение: about:debugging → Load Temporary Add-on → manifest.json
2. Проверить все функции согласно скриншотам выше
3. Проверить горячую клавишу Ctrl+Shift+U для скриншотов
4. Сохранить все 10 скриншотов в qa_artifacts/0.3.7.28/screenshots/
